--- a/노트/9.LinkedList 디지털합산.md
+++ b/노트/9.LinkedList 디지털합산.md
@@ -1,5 +1,5 @@
 ## 문제
-어떤 숫자를 자릿수별로 1개씩 LinkedList에 담았다. <br> 그런데 1의 자리가 헤더에 오도록 거꾸로 담았다. <br> 이런 식으로 LinkedList 2개를 받아서 합산하고 같은 식으로 LinkedList에 담아서 반환한다.
+어떤 숫자를 자릿수별로 1개씩 LinkedList에 담았다. <br> 그런데 1의 자리가 헤더에 오도록 거꾸로 담았다. <br> 이런 식으로 LinkedList 2개를 받아서 합산하고 합산한 결과값을 LinkedList에 담아서 반환해보자.
 
 <br> <br>
 
@@ -9,8 +9,8 @@
 + 합산한다.
 
 `풀이` <br>
-> Q: 각 숫자를 String으로 붙여서 419를 만들고, int로 변환해서 연산하여 LinkedList로 담는 것일까? <br>
-> 그러나, 기계적으로 엔지니어 각도로 생각해야 한다. `재귀호출`을 하자. 
+> Q: 각 숫자를 String으로 붙여서 419를 만들고, int로 변환해서 연산하여 LinkedList로 담는 식으로 풀어야 할까? <br>
+> NO, 기계적으로 엔지니어 각도로 생각해야 한다. `재귀호출`을 하자. 
 
 <br><br>
 
@@ -19,7 +19,14 @@
 + 두 수를 LinkedList 2개로 만든다.
 + C(캐리)
 + R(리턴) 
-> `뒤에서 앞으로 돌아갈 때, 호출해서 받은 Node를 자기가 생성한 노드의 다음 노드로 저장해야 한다.` <br> 5->6->7
+
+>`1` 처음부터 더하면서 올라간다. <br>
+9+6=15, 캐리 0을 호출하고, 다음 캐리값으로 1이 생긴다. 결과값은 5. <br>
+1+4+1=6, 다음 캐리값은 0이 되고 결과값은 6. <br>
+4+3+0=7, 다음 캐리값은 0이 되고 결과값 7을 저장한다.  <br>
+이제 끝 노드까지 도달했다. 이때 null null 0이므로 더 이상 진행을 하지 않는다. <br>
+`2` 이제 돌아간다 <br>
+링크를 걸면서 5-6-7을 연결한다. <br> 뒤에서 앞으로 돌아갈 때, 호출해서 받은 Node를 자기가 생성한 노드의 다음 노드로 저장해야 한다.
 
 ## 코드
 ```java
@@ -62,7 +69,7 @@ class LinkedList {
 
 public class Main {
     public static void main(String[] args) {
-        LinkedList l1 = new LinkedList();
+        LinkedList l1 = new LinkedList(); //리스트 2개를 선언
         l1.append(9);
         l1.append(1);
         l1.append(4);
@@ -74,8 +81,8 @@ public class Main {
         l2.append(3);
         l2.retrieve();
 
-        LinkedList.Node n = sumLists(l1.get(1),l2.get(1), 0);
-        while(n.next != null) {
+        LinkedList.Node n = sumLists(l1.get(1),l2.get(1), 0); //각각의 리스트의 헤드값과 캐리값0을 넣어준다.
+        while(n.next != null) { //결과 확인
             System.out.print(n.data +"->");
             n = n.next;
         }
@@ -87,7 +94,7 @@ public class Main {
             return null;
         }
         LinkedList.Node result = new LinkedList.Node(); //결과를 저장할 공간을 선언
-        int value = carry; //합산한 결과값을 저장한 value선언 (캐리로 초기화된다.)
+        int value = carry; //합산한 결과값을 저장한 value선언 (캐리로 초기화한다.)
 
         if(l1 != null) { 
             value += l1.data; //첫번째 l1이 null이 아니면, value에 값을 추가한다.
@@ -97,13 +104,13 @@ public class Main {
         }
         result.data = value%10; // 나머지만 result값으로 지정한다.
 
-        if (l1 != null || l2 != null) {  
-            LinkedList.Node next = sumLists(l1 == null ? null : l1.next, // true: 캐리값이 1, false: 캐리값이 0
+        if (l1 != null || l2 != null) {  //(노드가 최소한 둘 중 하나는 null이 아니여야 한다.), next 변수: 반환받은 값을 저장한다.
+            LinkedList.Node next = sumLists(l1 == null ? null : l1.next,  //이때 null체크를 해준다. l1,l2가 null인지 확인하고 다음 노드로 이동한다.
                     l2 == null ? null : l2.next,
-                    value >= 10 ? 1 : 0);
+                    value >= 10 ? 1 : 0); //value가 10보다 크면 캐리가 생긴다.  
             result.next = next; //결과값을 받아와 연결해준다.
         }
-        return result; //반환
+        return result; //그리고 자기 자신(result)을 반환한다.
     }
 }
 ```
