Update 15.  LinkedList - 디지털합산 - 심화학습.md

--- a/노트/15.  LinkedList - 디지털합산 - 심화학습.md
+++ b/노트/15.  LinkedList - 디지털합산 - 심화학습.md
@@ -38,5 +38,201 @@
 
 ## 코드
 ```java
+class LinkedList {
+    Node header;
+    static class Node {
+        int data;
+        Node next = null;
 
+        public Node(int data) {
+            this.data = data;
+        }
+
+        public Node() {}
+    }
+
+    public LinkedList() {
+        header = new Node();
+    }
+
+    void append(int d) {
+        Node end = new Node();
+        end.data = d;
+        Node n = header;
+        while(n.next != null) {
+            n = n.next;
+        }
+        n.next = end;
+    }
+
+    void retrieve() {
+        Node n = header.next;
+        while(n.next != null) {
+            System.out.print(n.data + "->");
+            n = n.next;
+        }
+        System.out.println(n.data);
+    }
+
+    public Node get(int i) {
+        Node n = header;
+        for (int j=0; j<i; j++) {
+            n = n.next;
+        }
+        return n;
+    }
+}
+
+class Storage { //재귀호출할 때, 반환을 받을 객체공간 클래스를 생성한다.
+    int carry = 0; //캐리
+    LinkedList.Node result = null; //결과값
+}
+
+public class Main {
+    public static void main(String[] args) {
+        LinkedList l1 = new LinkedList();
+        l1.append(9);
+        l1.append(1);
+        l1.append(9);
+        l1.retrieve();
+
+        LinkedList l2 = new LinkedList();
+        l2.append(0);
+        l2.append(8);
+        l2.append(4);
+        l2.retrieve();
+
+        LinkedList.Node l = sumLists(l1.get(1), l2.get(1));
+        while (l.next != null) {
+            System.out.print(l.data + "->");
+            l = l.next;
+        }
+        System.out.println(l.data);
+    }
+
+    private static LinkedList.Node sumLists(LinkedList.Node l1, LinkedList.Node l2) {
+        int len1 = getListLength(l1);
+        int len2 = getListLength(l2);
+
+        if (len1 < len2) {
+            l1 = LPadList(l2, len2-len1);
+        } else {
+            l2 = LPadList(l2, len1-len2);
+        }
+        Storage storage = addLists(l1, l2);
+        if (storage.carry == 0) {
+            return storage.result;
+        } else {
+            storage.result = insertBefore(storage.result, storage.carry);
+        }
+        return storage.result;
+    }
+
+    private static Storage addLists(LinkedList.Node l1, LinkedList.Node l2) {
+        if(l1 == null && l2 == null) {
+            Storage storage = new Storage();
+            return storage;
+        }
+        Storage storage = addLists(l1.next, l2.next);
+        int value = storage.carry + l1.data + l2.data;
+        int data = value%10;
+        storage.result = insertBefore(storage.result, data);
+        storage.carry = value/10;
+        return storage;
+    }
+
+    private static int getListLength(LinkedList.Node l) {
+        int total = 0;
+        while(l != null) {
+            total++;
+            l = l.next;
+        }
+        return total;
+    }
+
+    private static LinkedList.Node insertBefore(LinkedList.Node node, int data) {
+        LinkedList.Node before = new LinkedList.Node(data);
+        if (node != null) {
+            before.next = node;
+        }
+        return before;
+    }
+
+    private static LinkedList.Node LPadList(LinkedList.Node l, int length) {
+        LinkedList.Node head = l;
+        for (int i=0; i<length; i++) {
+            head = insertBefore(head, 0);
+        }
+        return head;
+    }
+}
+```
+
+### 결과
+```
+9->1->9
+0->8->4
+1->0->0->3
+```
+
+<br>
+
+`sumLists()` <br>
++ 먼저 전달받은 리스트 길이를 알아야 한다. (len1, len2)
++ 길이가 짧은 리스트에 노드 앞에 0을 넣어 채워줘야 한다. <br> len1, len2 길이를 비교해, 짧은 리스테 길이 차이 만큼 0을 붙여준다. 
++ storage를 반환하는 함수 addLists()를 실행시킨다.
+> sumLists()를 계속 도는 함수가 아니기 때문에 <br> 덧셈을 수행할 addLists() 함수가 필요하다. <br> 그래서 0을 채운 리스트 l1,l2를 넣어 addLists()를 실행시킨다.
+
++  addLists()를 끝내고 돌아왔을 때, 마지막으로 하나를 확인해야 한다.
+>  if (storage.carry == 0) 경우, storage.result 결과를 그대로 꺼낸다. <br>
+>  else (storage.carry == 1) 경우, 새로운 노드를 저장해 이어 붙여서 계산해야 한다. (storage.result = insertBefore(storage.result, storage.carry);)
+
+<br> <br>
+
+`addLists()` <br>
++ 일단 리스트의 맨 끝까지 가면 'l1==null && l2==null을 본다. <br> 끝까지 가면, 다음 노드는 null이다. (0을 채워 길이를 맞춰 주었으니 두 리스트가 끝까지 가면 null이다.) 
+> 여기서, storage 공간을 선언해서(Storage storage = new Storage();) <br> 그 객체 주소를 반환한다. (return storage;)
+
++ 맨 마지막에 가면, 자기 자신을 또 호출한다. (Storage storage = addLists(l1.next, l2.next);)
+> 첫번째 리스트의 다음주소, 두번째 리스트의 다음주소를 가지고 자신(addLists())를 호출한다. <br>
+> 반환: storage에 받아서 계산한다. (그런데 계산은 '노드 1바퀴 돌았다가` 나중에 해야 한다.)
+
++ int value = storage.carry + l1.data + l2.data;
+> 그러면 돌다가, 여기서 객체 주소를 받을 때 <br> 더하기를 해줄 임의의 공간을 만들고 storage에 캐리가 있는지 확인한다. <br> 
+> 그리고 내가 가진 2개의 데이터를 더한다. 
+ 
++ int data = value%10; 
+> 그러면, 내가 저장해야 할 데이터 값(data)은 value%10 값(나머지)이 된다.
+
++ storage.result = insertBefore(storage.result, data);
+> 그리고, storage의 결과값의 노드로 생성해서 앞에 추가한다. <br>
+> insertBefore(추가할 위치, 새로 생성할 데이터)
+
++ storage.carry = value/10;
+> 캐리는 value/10 (몫)이 된다.
+
+<br> <br>
+
+`getListLength` <br>
++ List를 받아서 길이를 반환하는 함수 
++ 해당 노드를 돌면서, total 수를 증가시켜, 마지막 노드에 오면 'total=List'길이가 된다.
+
+<br> <br>
+
+`insertBefore` <br>
++ 노드 앞에 새로운 노드를 추가하는 기능이다.
++ 함수 인자: LinkedList.Node node(추가할 위치), int data(새로 생성할 데이터)
++ LinkedList.Node before = new LinkedList.Node(data); 
+> 해당 노드의 앞 노드로 추가하려고 변수명을 before로 정했다. 
+
++ if (node != null)  
+> 위치가 null이 아니면, 나의 다음 노드로 붙여준다. (before.next = node;) <br> 이렇게 하면, before->node가 된다.
+
+<br> <br>
+
+`LPadList()` <br>
++ 함수인자(LinkedList.Node l, int length)을 받아서 왼쪽에 0을 채워주는 함수이다. 
++ Node head = l; (노드l를 복사해서 head를 생성한다.)
++ for()문
+> 길이(length)만큼 돌면서, head에 붙여준다. <br> 이때 insertBefore()함수를 써서 head(앞)에 0을 붙인다. (head = insertBefore(head, 0);)
 
